# TinyEXR.NET

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  TinyEXR.NET.sln  build_native_and_copy.ps1  build_win-x64.ps1  generate.rsp
.github/workflows/: aot-test.yml  build.yml  publish.yml  test.yml
Benchmark/: README.md  run-compression-benchmarks.ps1  sample-manifest.csv
Benchmark/TinyEXR.Benchmark/: BenchmarkInfrastructure.cs  Program.cs  TinyEXR.Benchmark.csproj  TinyExrBenchmarks.cs  V3CompressionBenchmarks.cs
Benchmark/baseline/: CMakeLists.txt
Benchmark/baseline/src/: main.cpp  openexr_compression.cpp  tinyexr_compression.cpp
Samples/TinyEXR.Viewer/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  README.md  TinyEXR.Viewer.csproj
Samples/TinyEXR.Viewer/Models/: ViewerModels.cs
Samples/TinyEXR.Viewer/Services/: ExrDocumentLoader.cs  ExrLayerHelper.cs  MetadataFormatter.cs  PreviewBitmapRenderer.cs
Samples/TinyEXR.Viewer/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
Test/: README.md
Test/TinyEXR.NetStandardFallback.Test/: TinyEXR.NetStandardFallback.Test.csproj
Test/TinyEXR.Test/: TinyEXR.Test.csproj
Test/TinyEXR.Test.Shared/: DeepTests.cs  LoadTests.cs  MultiViewTests.cs  RegressionTests.cs  SpectralAndCompressionTests.cs  StandardAttributeTests.cs  SubsampledChannelTests.cs  TestInfrastructure.cs  TinyEXR.Test.Shared.projitems  TinyEXR.Test.Shared.shproj  V1FacadeV3CoreTests.cs  V3DataSourceTests.cs  V3FormatTests.cs  V3HighLevelTests.cs  V3Htj2kTests.cs  V3ModelTests.cs  V3ReaderTests.cs  V3SimdTests.cs  V3SpectralTests.cs  V3UtilityTests.cs  V3WriterTests.cs  V3ZstdFrameTests.cs
TinyEXR.Generate/: Program.cs  TinyEXR.Generate.csproj
TinyEXR.NET/: CompressionType.cs  DeepImage.cs  EXRAttribute.cs  EXRBox2i.cs  EXRHeader.cs  EXRImage.cs  EXRMultiPartHeader.cs  EXRMultiPartImage.cs  EXRTile.cs  Exr.cs  ExrAttribute.cs  ExrBox2Int.cs  ExrBox2i.cs  ExrChannel.cs  ExrChannelInfo.cs  ExrDeepImage.cs  ExrHeader.cs  ExrHeaderReader.cs  ExrImage.cs  ExrImageReader.cs  ExrImageWriter.cs  ExrMultipartHeader.cs  ExrMultipartImage.cs  ExrPixelType.cs  ExrTile.cs  ExrTileDescription.cs  ExrTileLevelMode.cs  ExrTileRoundingMode.cs  ExrVersion.cs  LineOrderType.cs  LoadExrException.cs  Native.cs  NativeTypeNameAttribute.cs  NativeUtf8.cs  OpenExr.cs  PixelType.cs  ResultCode.cs  ScanlineExrWriter.cs  SinglePartExrReader.cs  SpectrumType.cs  (+4 more)
TinyEXR.NET/Assets/runtimes/osx-x64/native/: libTinyEXR.Native.dylib
TinyEXR.NET/Native/: DeepImage.cs  EXRAttribute.cs  EXRBox2i.cs  EXRChannelInfo.cs  EXRHeader.cs  EXRImage.cs  EXRMultiPartHeader.cs  EXRMultiPartImage.cs  EXRNative.cs  EXRTile.cs  EXRVersion.cs
TinyEXR.NET/PortV1/: ExrCompressionCodec.cs  ExrImplementation.cs  ZlibCompat.cs
TinyEXR.NET/V3/: Enums.cs  ExrFile.cs  Geometry.cs  Image.cs  ImageProcessing.cs  Lut3D.cs  Metadata.cs  PartConversion.cs  Spectral.cs  StreamingImageResizer.cs
TinyEXR.NET/V3/Compression/: ExrPredictor.cs  Htj2kDecoder.cs  Htj2kEncoder.cs  Htj2kEntropy.cs  Htj2kTransforms.cs  XxHash64.cs  ZstdBitReaders.cs  ZstdCompressedBlockDecoder.cs  ZstdCompressionEncoder.cs  ZstdFrameCodec.cs  ZstdFrameHeader.cs  ZstdFrameStatus.cs  ZstdFse.cs  ZstdHuffman.cs
TinyEXR.NET/V3/Format/: ExrFormatParser.cs  ParsedFile.cs
TinyEXR.NET/V3/IO/: DataContracts.cs  MemoryDataSource.cs  StreamDataSink.cs  StreamDataSource.cs  SuppliedDataSource.cs
TinyEXR.NET/V3/Reader/: ChunkOffsetReconstructionOperation.cs  DeepBlockOperation.cs  DeepPayloadDecoder.cs  DeepReadOperation.cs  ExrReader.cs  FlatBlockOperation.cs  FlatReadOperation.cs  ReaderContracts.cs  ReaderLayout.cs  ReaderParser.cs
TinyEXR.NET/V3/Simd/: PixelConversion.cs  SimdRuntime.cs
TinyEXR.NET/V3/Writer/: DeepBlockEncoder.cs  ExrWriter.cs  FlatBlockEncoder.cs  WriterContracts.cs  WriterPlan.cs
TinyEXR.NET/buildTransitive/: TinyEXR.NET.props  TinyEXR.NET.targets
TinyEXR.Native/: CMakeLists.txt  TinyEXR.Native.cpp  TinyEXR.Native.h  tinyexr_modify.cpp  tinyexr_modify.h
TinyEXR.Test/: DeepTests.cs  LoadTests.cs  MultipartCompatibilityTests.cs  Program.cs  README.md  RegressionTests.cs  RoundTripTests.cs  SpectralAndCompressionTests.cs  StandardAttributeTests.cs  TestInfrastructure.cs  TinyEXR.Test.csproj  TinyEXR.Test.sln  prepare-openexr-images.ps1  run_nativeaot_smoke.ps1
TinyEXR.Test/Common/: TestData.cs  TestHelpers.cs  UpstreamCaseManifest.cs
TinyEXR.Test/TinyEXR.NativeAot.Smoke/: Program.cs  TinyEXR.NativeAot.Smoke.csproj
TinyEXR.Test/TinyEXR.NetStandardFallback.Test/: NetStandardFallbackTests.cs  TinyEXR.NetStandardFallback.Test.csproj
TinyEXR.Test/TinyEXR.Test/: ExrApiShapeTests.cs  ExrCompressionManifestParityTests.cs  ExrCompressionParityTests.cs  ExrIntegrationTests.cs  ExrManagedFacadeTests.cs  ExrRoundTripTests.cs  ExrUnitTests.cs  ExrUpstreamCompatibilityTests.cs  ExrWriterParityTests.cs  MSTestSettings.cs  SimpleTest.cs  TinyEXR.Test.csproj
docs/: tinyexr-v3.md
native/: .clang-format  CMakeLists.txt  TinyEXR.NET.Native.cpp
samples/TinyEXR.NativeAot.SourceStatic/: Program.cs  README.md  TinyEXR.NativeAot.SourceStatic.csproj
